# palgen

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  action.yml  conf.py  index.rst  notes.md  old_README.md  palgen.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  package.yml  publish.yml  python-package.yml
.trunk/: trunk.yaml
.trunk/config/: .pylintrc  .taplo.toml
docs/: .gitignore  glossary.rst  installation.rst  requirements.txt
docs/_static/: responsive_graphviz.css
docs/_templates/: testreport.rst
docs/_templates/python/: class.rst
docs/diagrams/: index.rst
docs/extensions/: cli.rst  diagrams.py  docs.py  extensions.rst  index.rst  ingest.rst  pipelines.rst
docs/extensions/test/: tox.py
docs/modules/: diagrams.py  docs.py
docs/modules/test/: sketch  test_report.rst.in  tox.py  tox.rst.in
docs/tools/: diagrams.py  docs.py
docs/tools/test/: index.rst.in  tox.py
docs/usage/: action.rst  cli.rst  extensions.rst  index.rst  modules.rst  quickstart.rst  settings.rst
examples/: index.rst
examples/cmake/: .gitignore  CMakeLists.txt  index.rst  palgen.toml
examples/cmake/extensions/: fstring.py
examples/cmake/modules/: fstring.py
examples/cmake/src/: main.cpp
examples/cmake/src/info/: info.h.in  info.py
examples/cmake/src/preprocess/: preprocess.py
examples/cmake/src/sources/: sources.py
examples/conan/: .gitignore  CMakeLists.txt  conanfile.py  index.rst  palgen.toml
examples/conan/src/: error.toml  example.cpp  example.h  main.cpp  test.py
examples/conan/test_package/: conanfile.py
examples/preprocessor/: index.rst
examples/tutorial/: palgen.toml
examples/tutorial/extensions/: build.py  clean.py  hello_world.py
examples/tutorial/modules/: hello_world.py
examples/tutorial/src/: main.cpp  map.hpp  test.embed.txt
src/palgen/: __init__.py  __main__.py  cli.py  conan.py  ext.py  generator.py  loader.py  log.py  module.py  modules.py  palgen.py  parser.py  project.py  template.py  templates.py  validation.py
src/palgen/application/: __init__.py  log.py  palgen.py  runner.py  util.py
src/palgen/cli/: __init__.py  direct.py  loader.py  package.py  runner.py  util.py
src/palgen/commands/: __init__.py  info.py
src/palgen/ingest/: __init__.py  file.py  filter.py  filters.py  loader.py  path.py  python.py  raw.py  toml.py  transform.py
src/palgen/integrations/: conan.py
src/palgen/interfaces/: __init__.py  codegen.py  module.py  tool.py
src/palgen/loaders/: __init__.py  ast_helper.py  builtin.py  command.py  loader.py  manifest.py  python.py
src/palgen/machinery/: __init__.py  attributes.py  filesystem.py  pipeline.py  template.py  types.py
src/palgen/schemas/: __init__.py  palgen.py  project.py  root.py
src/palliate_codegen/: __init__.py  generator.py  log.py  parser.py
tests/: annotated.py  conftest.py  scratchpad.py  test_ast.py  test_fail.py  test_palgen.py  test_pipeline.py  test_project.py
tests/application/: test_cli.py  test_palgen.py
tests/ingest/: test_filter.py  test_filters.py
tests/loaders/: test_ast.py
tests/machinery/: test_pipeline.py  test_template.py
tests/mock/: palgen.toml
tests/util/: test_ast.py  test_cli.py  test_pipeline.py  test_uncategorized.py
(+47 files in other folders)
